--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
+    "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -60,8 +61,7 @@
     "react-native-video": "^6.13.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-video": "~2.0.6"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
