--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "expo": "~52.0.43",
     "expo-auth-session": "~6.0.3",
@@ -54,13 +55,14 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-calendars": "^1.1312.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "^6.7.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.13.0",
